# GoogleTestDemo

./: .gitignore  CMakeLists.txt
include/: foo.h
include/Adders/: Adder.h
src/: foo.cpp  main.cpp
src/Adders/: Adder.cpp
test/: test_adder.cpp  test_foo.cpp
